<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.VerifyOtpFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/we_sent_you"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/sent_to"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/regular_text"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:cardBackgroundColor="#F7F7F7"
                android:layout_margin="20dp"
                app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_otp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="Enter verification code"
                        android:inputType="number"
                        android:maxLength="6"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text"
                        tools:ignore="LabelFor" />

            </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_didnt_receive"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/regular_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/resend"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/regular_text"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tvCountDownTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:minWidth="20dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/rectangle_circular_ends"
                    android:backgroundTint="@color/navy_blue"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/regular_text"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="Verifying your OTP.."
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/my_progressBar"
            style="@style/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@+id/tv_loading"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:indeterminate="true" />
    </RelativeLayout>


</RelativeLayout>